# cryptoinsighto

./: .gitignore  README.md  README2.md  pyproject.toml
cryptoinsighto/coinbase_mock/: generate_mock_order_book.py  get_order_book.py  run_mock_generate.py
cryptoinsighto/generate_insights/: main.py  run_all_insights.py
cryptoinsighto/insights/: main.py  run_all_insights.py
cryptoinsighto/insights/analysis/: max_spread.py  (+3 more)
cryptoinsighto/load_data/: read_from_local_folder.py
cryptoinsighto/types/: book_record.py  book_record_storage.py  order_book_entry.py
mock_data/: coinbase_mock_bookrecord_20241128_055919.json  coinbase_mock_bookrecord_20241128_060141.json  coinbase_mock_bookrecord_20241128_060146.json  coinbase_mock_bookrecord_20241128_060151.json  coinbase_mock_bookrecord_20241128_060156.json  coinbase_mock_bookrecord_20241128_060202.json  coinbase_mock_bookrecord_20241128_060207.json  coinbase_mock_bookrecord_20241128_060211.json  coinbase_mock_bookrecord_20241128_060216.json  coinbase_mock_bookrecord_20241128_060221.json  coinbase_mock_bookrecord_20241128_060226.json  coinbase_mock_bookrecord_20241128_060231.json  coinbase_mock_bookrecord_20241128_060236.json  coinbase_mock_bookrecord_20241128_060240.json  coinbase_mock_bookrecord_20241128_060245.json  coinbase_mock_bookrecord_20241128_060250.json  coinbase_mock_bookrecord_20241128_060255.json  coinbase_mock_bookrecord_20241128_060300.json  coinbase_mock_bookrecord_20241128_060305.json  coinbase_mock_bookrecord_20241128_060310.json
tests/: test_get_order_book.py  test_read_from_local_folder.py
