[tool.poetry]
name = "cryptoinsighto"
version = "0.1.0"
description = ""
authors = ["Than Htut Soe <than@consigli.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.2"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
aiohttp = "^3.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_mock = "cryptoinsighto.coinbase_mock.run_mock_generate:main"
